--- a/Home.css
+++ b/Home.css
@@ -20,8 +20,10 @@ html {
 .sectionOne{
     display: grid;
     grid-template-columns: repeat(2, 40% 60%);
-    grid-auto-rows: 400px;
-    margin-top: 3rem;
+    grid-auto-rows: 600px;
+    position: relative;
+    background-color: rgb(0, 0, 34);
+    border: 1px solid white;
 }
 
 .sectionOne .textHolder{
@@ -89,7 +91,6 @@ html {
 }
 
 .holdImage{
-    border: 3px solid white;
     width: 350px;
     height: 350px;
     border-radius: 100rem;
