--- a/About.css
+++ b/About.css
@@ -21,7 +21,7 @@
 .s2_contentContainer{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 400px;
+    grid-auto-rows: 350px;
 }
 
 .sectionTwo .textHolder{
@@ -117,11 +117,16 @@
 }
 
 @media (max-width:500px) {
+    .s2_contentContainer{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 250px;
+    }
+
     .sectionTwo .textHolder{
-        padding: 2rem;
+        padding: 0 1rem;
         grid-column: 2;
         grid-row: 2;
-        background-color: aliceblue;
     }
 
     .circle{
@@ -130,11 +135,18 @@
     }
 
     .sectionTwo .textHolder h1{
-        font-size: 1.5vw;
+        font-size: 3.5vw;
         padding: 1rem 0;
     }
     
     .sectionTwo .textHolder p{
-        font-size: 1vw;
+        font-size: 3vw;
+    }
+
+    .tools{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
     }
 }
