--- a/Home.css
+++ b/Home.css
@@ -21,7 +21,6 @@ html {
     display: grid;
     grid-template-columns: repeat(2, 40% 60%);
     grid-auto-rows: 600px;
-    position: relative;
     background-color: rgb(0, 0, 34);
     border: 1px solid white;
 }
@@ -102,7 +101,6 @@ html {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-auto-rows: 300px;
-        margin-top: 3rem;
     }
 
     .holdImage{
@@ -139,8 +137,7 @@ html {
     .sectionOne{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 300px;
-        margin-top: 3rem;
+        grid-auto-rows: max-content;
     }
 
     .holdImage{
