--- a/About.css
+++ b/About.css
@@ -8,7 +8,7 @@
     margin: 0 5rem;
     text-align: center;
     color: rgb(72, 72, 255);
-    margin-top: 3rem;
+    margin-top: 2rem;
     font-family: montserrat;
 }
 
@@ -90,6 +90,10 @@
 }
 
 @media (max-width:1000px) {
+    .sectionTwo{
+        margin-top: 1rem;
+    }
+
     .s2_contentContainer{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -117,6 +121,10 @@
 }
 
 @media (max-width:500px) {
+    .sectionTwo{
+        margin-top: 1rem;
+    }
+
     .s2_contentContainer{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
