--- a/Home.css
+++ b/Home.css
@@ -9,20 +9,49 @@ html {
 }
 
 .headerText{
-    margin: 0 5rem;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 4rem;
     color: rgb(72, 72, 255);
     margin-top: 3rem;
     font-family: montserrat;
-    font-size: 1.2vw;
+    border-radius: 1rem;
+    border: 1px solid white;
 }
 
-.sectionOne{
-    display: grid;
-    grid-template-columns: repeat(2, 40% 60%);
-    grid-auto-rows: 600px;
-    background-color: rgb(0, 0, 34);
+.text{
+    font-size: 2rem;
 }
+
+.line{
+    font-size: 2vw;
+}
+
+.sectionOne {
+    position: relative;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-auto-rows: 600px;
+    overflow: hidden;
+    border-radius: 0 0 4rem 4rem;
+    z-index: 1;
+  }
+  
+  .sectionOne::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url('homeBg.png');
+    background-size: cover;
+    background-position: center;
+    filter: blur(10px); 
+    z-index: -1; 
+  }
 
 .sectionOne .textHolder{
     line-height: 3rem;
@@ -67,7 +96,7 @@ html {
 
 
 .sectionOne .textHolder h1{
-    font-size: 3.5vw;
+    font-size: 4.5vw;
     line-height: 5rem;
 }
 
@@ -79,20 +108,20 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .sectionOne .imageHolder img{
-    background-color: white;
+    background-color: rgb(253, 253, 253);
     object-position: -55px;
+    border-radius: 30%;
+    box-shadow: -15px 10px rgb(35, 28, 107);
     object-fit:cover;
 }
 
 .holdImage{
     width: 350px;
     height: 350px;
-    border-radius: 100rem;
-    overflow: hidden;
 }
 
 @media (max-width:1000px) {
@@ -103,11 +132,8 @@ html {
     }
 
     .holdImage{
-        border: 3px solid white;
         width: 300px;
         height: 300px;
-        border-radius: 100rem;
-        overflow: hidden;
     }
 
     .sectionOne .textHolder{
@@ -126,7 +152,6 @@ html {
     }
 
     .sectionOne .imageHolder img{
-        background-color: white;
         object-position: -45px;
         object-fit:cover;
     }
@@ -140,11 +165,8 @@ html {
     }
 
     .holdImage{
-        border: 3px solid white;
         width: 250px;
         height: 250px;
-        border-radius: 100rem;
-        overflow: hidden;
     }
 
     .sectionOne .textHolder{
@@ -163,7 +185,6 @@ html {
     }
 
     .sectionOne .imageHolder img{
-        background-color: white;
         object-position: -35px;
         object-fit:cover;
     }
