--- a/About.css
+++ b/About.css
@@ -103,7 +103,7 @@
     }
 
     .sectionTwo .textHolder{
-        padding: 3rem;
+        padding: 10%;
         grid-column: 2;
         grid-row: 2;
     }
@@ -134,7 +134,7 @@
     }
 
     .sectionTwo .textHolder{
-        padding: 0 1rem;
+        padding: 0 7%;
         grid-column: 2;
         grid-row: 2;
     }
