--- a/Contact.css
+++ b/Contact.css
@@ -15,12 +15,13 @@
 
 
 .sectionFour{
-    margin: 4rem 10rem;
+    margin: 0 10rem;
     padding: 2rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(300px);
     background-color: rgb(32, 32, 32);
+    border-radius: 2rem 2rem 0 0;
 }
 
 .inputDetails a{
@@ -133,7 +134,7 @@ p{
 
 @media (max-width:1000px) {
     .sectionFour{
-        margin: 4rem 10%;
+        margin: 0 10%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
@@ -151,6 +152,6 @@ p{
 
 @media (max-width:700px) {
     .sectionFour{
-        margin: 4rem 1rem;
+        margin: 0 1rem;
     }
 }
