--- a/Home.css
+++ b/Home.css
@@ -18,7 +18,6 @@ html {
     margin-top: 3rem;
     font-family: montserrat;
     border-radius: 1rem;
-    border: 1px solid white;
 }
 
 .text{
@@ -32,7 +31,7 @@ html {
 .sectionOne {
     position: relative;
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 35% 65%;
     grid-auto-rows: 600px;
     overflow: hidden;
     border-radius: 0 0 4rem 4rem;
@@ -109,12 +108,15 @@ html {
     justify-content: center;
     align-items: center;
     overflow: visible;
+    mask-image: linear-gradient(to right, black 65%, transparent);
 }
 
 .sectionOne .imageHolder img{
-    background-color: rgb(253, 253, 253);
-    object-position: -55px;
-    border-radius: 30%;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    /* object-position: -55px;
+    border-radius: 30%; */
     box-shadow: -15px 10px rgb(35, 28, 107);
     object-fit:cover;
 }
@@ -128,13 +130,18 @@ html {
     .sectionOne{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 300px;
+        grid-auto-rows: 350px;
     }
 
-    .holdImage{
+    .sectionOne .imageHolder{
+        mask-image: linear-gradient(to bottom, black 65%, transparent);
+        
+    }
+
+    /* .holdImage{
         width: 300px;
         height: 300px;
-    }
+    } */
 
     .sectionOne .textHolder{
         display: flex;
@@ -152,7 +159,7 @@ html {
     }
 
     .sectionOne .imageHolder img{
-        object-position: -45px;
+        object-position: top;
         object-fit:cover;
     }
 }
@@ -185,7 +192,6 @@ html {
     }
 
     .sectionOne .imageHolder img{
-        object-position: -35px;
         object-fit:cover;
     }
 }
